# twitch-bot

./: .gitignore  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/: config.py  db.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  health.py  tokens.py
backend/src/api/v1/models/: default.py  health.py
bot/: README.md  pyproject.toml
bot/src/: config.py  main.py  test.py
bot/src/components/: commands.py
frontend/: README.md  package.json
frontend/src/app/overlay/: page.tsx
mongo-scripts/: startup.sh
nginx/: nginx.conf
nginx/certs/: dummy.txt
overlays_frontend/: Dockerfile  package.json
overlays_frontend/src/app/components/pages/: Overlay.tsx
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  db.py  message.py  tokens.py
websockets_server/: README.md  pyproject.toml
websockets_server/src/: config.py  main.py
